--- a/style.css
+++ b/style.css
@@ -2,13 +2,47 @@ body {
     width: 100vw;
     height: 100vh;
     margin: 0;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .container {
-    background-color: #469FBC;
+    background-color: #20639B;
     color: #ffffff;
     margin-left: 5vw;
     margin-right: 5vw;
     width: 90vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.head {
+    margin: 50px;
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.getInput {
+    width: 80%;
+    height: 50px;
+    padding: 10px;
+}
+
+.getInput input {
+    width: 80%;
+    height: 40px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.getInput button {
+    width: 5%;
+    height: 35px;
+    border-radius: 10px;
+    background-color: #3CAEA3;
+    box-sizing: border-box;
 }
